fixed ImageComponent alignment issue

--- a/src/functions/ImageComponent/genImageComponent.scss
+++ b/src/functions/ImageComponent/genImageComponent.scss
@@ -1,10 +1,16 @@
 .image-component {
 	position: relative;
+	padding: 0px;
+	line-height: 0;
+	img {
+		box-shadow: 5px 5px 15px rgba(0, 0, 0, 0.34);
+		width: 100%;
+	}
 	.fullscreen-button {
 		position: absolute;
 		height: 40px;
 		width: 50px;
-		bottom: 15px;
+		bottom: 10px;
 		right: 10px;
 		background-color: rgba(0, 0, 0, 0.5);
 		border-radius: 7px;
